<resources>
    <string name="app_name">CyanogenMod settings</string>
    <string name="ui_status_bar">Status Bar Customization</string>
    <string name="ui_rotation_title">Accelerometer rotation</string>
    <string name="pref_rotation_90_title">90 degrees</string>
    <string name="pref_rotation_180_title">180 degrees</string>
    <string name="pref_rotation_270_title">270 degrees</string>
    <string name="trackball_title">LED notifications</string>
    <string name="trackball_summary">Control trackball/LED notification colors and pulse</string>
    <string name="ui_webview_title">WebView</string>
    <string name="pref_pinch_reflow_title">Reflow after pinch in</string>
    <string name="pref_pinch_reflow_summary">Reflow content immediately after pinch to zoom in</string>
    <string name="ui_overscroll_title">Overscrolling</string>
    <string name="pref_overscroll_title">Enable overscrolling</string>
    <string name="pref_overscroll_summary_on">Scrollable objects overshoot and bounce back</string>
    <string name="pref_overscroll_summary_off">Scrollable objects do not overshoot</string>
    <string name="pref_overscroll_weight_title">Overscrolling weight</string>
    <string name="pref_overscroll_weight_summary">Select the weight of the scrollable objects</string>
    <string name="ui_lockscreen_title">Screen lock settings</string>
    <string name="pref_lockscreen_delay_title">Delay</string>
    <string name="pref_lockscreen_timeout_lock_delay">Screen timeout delay</string>
    <string name="pref_lockscreen_screenoff_lock_delay">Screen turned off delay</string>
    <string name="pref_lockscreen_timeout_lock_delay_summary">How long to delay before enabling screen lock when screen times out</string>
    <string name="pref_lockscreen_screenoff_lock_delay_summary">How long to delay before enabling screen lock when screen is turned off</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_summary">Status bar tweaks</string>
    <string name="dp_title">Date and provider</string>
    <string name="dp_summary">Date and provider tweaks</string>
    <string name="date_title">Date</string>
    <string name="title_date_color">Date color</string>
    <string name="plmn_title">PLMN carrier string</string>
    <string name="title_show_plmn_ls">Display PLMN (lockscreen)</string>
    <string name="summary_on_show_plmn_ls">PLMN field is displayed on lockscreen</string>
    <string name="summary_off_show_plmn_ls">PLMN field is not displayed on lockscreen</string>
    <string name="title_show_plmn_sb">Display PLMN (status bar)</string>
    <string name="summary_on_show_plmn_sb">PLMN field is displayed in status bar</string>
    <string name="summary_off_show_plmn_sb">PLMN field is not displayed in status bar</string>
    <string name="title_plmn_label_color">Carrier PLMN label color</string>
    <string name="spn_title">SPN carrier string</string>
    <string name="title_show_spn_ls">Display SPN (lockscreen)</string>
    <string name="summary_on_show_spn_ls">SPN field is displayed on lockscreen</string>
    <string name="summary_off_show_spn_ls">SPN field is not displayed on lockscreen</string>
    <string name="title_show_spn_sb">Display SPN (status bar)</string>
    <string name="summary_on_show_spn_sb">SPN field is displayed in status bar</string>
    <string name="summary_off_show_spn_sb">SPN field is not displayed in status bar</string>
    <string name="title_spn_label_color">Carrier SPN label color</string>
    <string name="title_notifications_sb">Statusbar notifications</string>
    <string name="title_notifications_color_tweaks">Notifications colors</string>
    <string name="summary_notifications_color_tweaks">Notifications ticker, ongoing notifications, latest notifications, clear notifications, etc</string>
    <string name="title_notifications_ticker_color">Notifications ticker color</string>
    <string name="title_notifications_count_color">Notifications count color</string>
    <string name="title_no_notifications_color">No notification title color</string>
    <string name="title_clear_button_label_color">Clear notifications label color</string>
    <string name="title_ongoing_notifications_color">Ongoing notifications title color</string>
    <string name="title_latest_notifications_color">Latest notifications title color</string>
    <string name="title_notifications_items">Items notifications</string>
    <string name="title_notifications_items_title">Items title color</string>
    <string name="title_notifications_items_text">Items text color</string>
    <string name="title_notifications_items_time">Items time color</string>
    <string name="te_title">Tweaks extras</string>
    <string name="te_title_summary">Extra tools for interface tweaks</string>
    <string name="button_settings_title">Button settings</string>
    <string name="lockscreen_settings_title">Lockscreen settings</string>
    <string name="pref_lockscreen_music_controls_title">Lockscreen music controls</string>
    <string name="pref_lockscreen_music_controls_summary">Displays music controls on the lockscreen</string>
    <string name="pref_lockscreen_always_music_controls_title">Always display music controls</string>
    <string name="pref_lockscreen_always_music_controls_summary">Display music controls regardless of whether or not music is playing</string>
    <string name="pref_trackball_wake_title">Trackball wake</string>
    <string name="pref_trackball_wake_summary">Pressing the trackball wakes the device</string>
    <string name="pref_trackball_unlock_title">Trackball unlock</string>
    <string name="pref_trackball_unlock_summary">Pressing the trackball unlocks the device</string>
    <string name="pref_menu_unlock_title">Menu unlock</string>
    <string name="pref_menu_unlock_summary">Pressing the menu button unlocks the device</string>
    <string name="pref_lockscreen_quick_unlock_control_title">Quick Unlock</string>
    <string name="pref_lockscreen_quick_unlock_control_summary">No need to press OK when entering Pin or Password. Delete counts as bad try.</string>
    <string name="pref_lockscreen_phone_messaging_control_title">Phone and Messaging</string>
    <string name="pref_lockscreen_phone_messaging_control_summary">Phone and Messaging accessible from Lockscreen.</string>
    <string name="pref_messaging_tab_app_title">Messaging tab application</string>
    <string name="pref_lockscreen_style_title">Lockscreen style</string>
    <string name="pref_lockscreen_style_summary">Select preferred lockscreen style</string>
    <string name="long_press_home_title">Long-press home settings</string>
    <string name="long_press_home_summary">Number of recent applications, etc</string>
    <string name="pref_compcache_title">Compcache RAM Usage</string>
    <string name="pref_compcache_summary">Compress memory for increased virtual capacity (requires reboot)</string>
    <string name="pref_jit_mode_title">Use JIT</string>
    <string name="pref_jit_mode_summary">Use the Dalvik just-in-time compiler (requires reboot)</string>
    <string name="pref_use_dithering_title">Enable surface dithering</string>
    <string name="pref_use_dithering_summary">Dithering surfaces improves image quality at the cost of performance (requires reboot)</string>
    <string name="pref_heapsize_title">VM heap size</string>
    <string name="pref_heapsize_summary">Maximum amount of memory per VM heap (requires reboot)</string>
    <string name="haptic_title">Haptic feedback tweaks</string>
    <string name="haptic_summary">Adjust when and how strong haptic feedback occurs</string>
    <string name="title_haptic_feedback">Haptic feedback main</string>
    <string name="summary_on_haptic_feedback">Use haptic feedback on keypress for softkeys and certain UI interactions</string>
    <string name="summary_off_haptic_feedback">No haptic feedback on keypress for softkeys and certain UI interactions</string>
    <string name="title_haptic_feedback_up">Haptic feedback up</string>
    <string name="summary_on_haptic_feedback_up">Use haptic feedback on key release for softkeys and certain UI interactions</string>
    <string name="summary_off_haptic_feedback_up">No haptic feedback on key release for softkeys and certain UI interactions</string>
    <string name="title_haptic_feedback_all">Haptic screen items</string>
    <string name="summary_on_haptic_feedback_all">Use haptic feedback when making screen selections</string>
    <string name="summary_off_haptic_feedback_all">No haptic feedback when making screen selections</string>
    <string name="title_haptic_down_decider">Set Down Pattern</string>
    <string name="title_haptic_up_decider">Set Up Pattern</string>
    <string name="title_haptic_long_decider">Set Long-Press Pattern</string>
    <string name="title_haptic_tap_decider">Set Keypad Tap Pattern</string>
    <string name="general_title">General</string>
    <string name="pref_power_prompt_title">Power prompt</string>
    <string name="pref_power_prompt_summary">Change whether there is a prompt after choosing shutdown or reboot</string>
    <string name="pref_render_effect_title">Render effect</string>
    <string name="pref_render_effect_summary">Change what colors are used to draw the screen (potential battery savings)</string>
    <string name="title_notification_bar">Notification bar</string>
    <string name="title_custom_not_bar">Custom notification bar</string>
    <string name="summary_custom_not_bar_on">Using customized notification bar color and style</string>
    <string name="summary_custom_not_bar_off">Using classic CyanogenMod notification bar</string>
    <string name="title_not_bar_color_mask">Bar color</string>
    <string name="summary_not_bar_color_mask">Note: Transparency (alpha) setting will not be applied</string>
    <string name="title_custom_exp_not_bar">Custom pulldown bar</string>
    <string name="summary_custom_exp_not_bar_on">Using customized expanded pulldown bar color and style</string>
    <string name="summary_custom_exp_not_bar_off">Using classic CyanogenMod expanded pulldown bar</string>
    <string name="title_not_exp_bar_color_mask">Pulldown bar color</string>
    <string name="summary_not_exp_bar_color_mask">Pick a color to apply to elements of the pulldown notification bar</string>
    <string name="title_expanded_widget">Notification power widget</string>
    <string name="summary_expanded_widget">Use the expanded views power widget</string>
    <string name="title_expanded_hide_onchange">Hide on change</string>
    <string name="summary_expanded_hide_onchange">Hide the notification pulldown after toggling a widget button</string>
    <string name="expanded_color_mask">Indicator color</string>
    <string name="title_widget_picker">Widget buttons</string>
    <string name="summary_widget_picker">Pick your widget buttons</string>
    <string name="pref_lock_home_title">Lock home in memory</string>
    <string name="pref_lock_home_summary">Attempt to keep the current home app in memory at all times</string>
    <string name="pref_lock_mms_title">Lock messaging app in memory</string>
    <string name="pref_lock_mms_summary">Avoid lost messages on low memory situations</string>
    <string name="backlight_title">Automatic backlight</string>
    <string name="backlight_summary">Tweak levels and filtering</string>
    <string name="user_defined_key1">Quick Key 1</string>
    <string name="user_defined_key2">Quick Key 2</string>
    <string name="user_defined_key3">Quick Key 3</string>
    <string name="user_defined_not_set">Nothing Set</string>
    <string name="pref_lockscreen_title">Lockscreen gestures</string>
    <string name="pref_lockscreen_disable_unlock_tab">Disable unlock slider</string>
    <string name="pref_lockscreen_disable_unlock_tab_summary">Note: You need to enable trackball, menu key, or gesture unlocking before this option becomes available</string>
</resources>